<resources>
    <string name="app_name">SuperMart</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="help_title">Help</string>
    <string name="account_title">Account</string>
    <string name="search_title">Search</string>
    <string name="cart_title">cart</string>
    <string name="about_title">About</string>
    <string name="discount_ocost"><strike>KSH 40000</strike></string>

    <!-- fragment-account.xml -->
    <string name="a_name">Customer ID will be autogenerated</string>
    <string name="a_custid">Customer ID e.g CUST/2018/0000</string>
    <string name="custid">CUST/2018/0001</string>
    <string name="a_email">Email e.g bsandstone@gmail.com</string>
    <string name="a_password">Enter Password</string>
    <string name="email">Email</string>
    <string name="a_cpassword">Confirm Password</string>
    <string name="a_phone">Phone No e.g +254721928029</string>
    <string name="a_button">Create Account</string>
    <string name="a_login">Already a member?Login.</string>
    <string name="a_county">Select County</string>
    <string name="login">Login</string>
    <string name="fpassword">Forgot Password</string>
    <string name="ac_email">pkitheru@gmail.com</string>
    <string name="ac_name">Pius Kitheru</string>
    <string name="ac_logout">Logout</string>
    <string name="phone">Phone Number</string>
    <string name="update">Update</string>
    <string name="county">Kirinyaga</string>
    <string name="ad_county">County</string>
    <string name="reset">Reset Password</string>


    <!-- for cart_items -->
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="two">2</string>
    <string name="cash">KSH 300000.0</string>
    <string name="des">Item Desription</string>
    <string name="store">Khetias</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps2">Maps Piusin</string>
    <string name="title_activity_maps">Map</string>
</resources>
