<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        >
    </item>

    <item
        android:id="@+id/overflow_cart"
        android:title="@string/cart_title"
        app:actionLayout="@layout/cart_layout"
        app:showAsAction="always">
   </item>


    <item
    android:id="@+id/account"
    android:title="@string/account_title"
    android:icon="@mipmap/account"
    app:showAsAction="never">
  </item>
    <item
        android:id="@+id/help"
        android:title="@string/help_title"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/about"
        android:title="@string/about_title"
        app:showAsAction="never">
    </item>



</menu>