<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piusin.event.FragmentAccountDetails"
    android:layout_margin="8dp"
    android:orientation="vertical">

 <de.hdodenhof.circleimageview.CircleImageView
     android:id="@+id/ad_image"
     android:layout_width="120dp"
     android:layout_height="120dp"
     android:layout_marginTop="9dp"
     android:layout_gravity="center"
     android:src="@mipmap/upload"
     app:civ_border_color="#FF000000"
     app:civ_border_width="2dp" />

 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/name"
     android:layout_marginTop="10dp"
     android:textStyle="bold"
     android:textSize="25sp"
     android:gravity="center"
     />
 <EditText
     android:id="@+id/ad_name"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
     android:text="@string/ac_name"
     android:textSize="22sp"
     android:textStyle="bold"
     android:gravity="center"
     android:inputType="text"/>

 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/email"
     android:layout_marginTop="8dp"
     android:textStyle="bold"
     android:textSize="25sp"
     android:gravity="center"
     />
 <EditText
     android:id="@+id/ad_email"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
     android:text="@string/ac_email"
     android:textSize="25sp"
     android:textStyle="bold"
     android:gravity="center"
     android:inputType="textEmailAddress"/>

 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/ad_county"
     android:layout_marginTop="10dp"
     android:textStyle="bold"
     android:textSize="25sp"
     android:gravity="center"
     />
 <Spinner
     android:id="@+id/account_spinners"
     android:layout_width="match_parent"
     android:layout_height="30dp"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     android:background="#000000"
     android:padding="8dp"
     android:layout_marginTop="20dp" />




 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
     android:orientation="horizontal">
  <Button
      android:id="@+id/ad_bLogout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="55dp"
      android:text="@string/ac_logout" />
  <Button
      android:id="@+id/ad_bUpdate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="55dp"
      android:text="@string/update" />
 </LinearLayout>


</LinearLayout>
