<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardview_featuredstoreproducts"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:weightSum="5">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/cart_itemimage"
                android:layout_weight="1.5"
                android:scaleType="fitCenter"
                android:src="@drawable/khetias"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:padding="3dp">
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/cart_itemname"
                        android:text="@string/store"/>
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:id="@+id/cart_itemdelete"
                        android:src="@drawable/delete"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/cart_itemdesc"
                    android:text="@string/des"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="bottom">
                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/cart_itemcost"
                        android:layout_margin="5dp"
                        android:text="@string/cash"
                        android:textStyle="bold"
                        android:textSize="18dp"/>
                    <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:text="@string/minus"
                        android:layout_margin="3dp"
                        android:id="@+id/btncart_subtract"
                        android:background="@drawable/round_button"/>
                    <TextView
                        android:layout_margin="3dp"
                        android:layout_width="20dp"
                        android:text="@string/two"
                        android:id="@+id/cart_itemcount"
                        android:layout_height="20dp"/>
                    <Button
                        android:layout_width="30dp"
                        android:text="@string/add"
                        android:layout_margin="3dp"
                        android:layout_height="30dp"
                        android:id="@+id/btncart_add"
                        android:background="@drawable/round_button1"/>
                </LinearLayout>







            </LinearLayout>




        </LinearLayout>
        
        
        
    </android.support.v7.widget.CardView>
</RelativeLayout>