<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.piusin.event.AccountFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/upload"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_marginTop="30dp"
        android:layout_marginStart="140dp"
        />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_below="@id/user_image"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_username"
            app:errorEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/a_name"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_email"
            app:errorEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:hint="@string/a_email"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_password"
            app:passwordToggleEnabled="true"
            app:errorEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/a_password"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/account_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#000000"
            android:padding="8dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>


    <Button
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:text="@string/a_button"
        android:id="@+id/bCreateAccount"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_marginStart="10dp"
        android:layout_below="@id/bCreateAccount"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/txtStartLogin"
        android:text="@string/a_login"/>

</RelativeLayout>
